{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 57,
  "lineage": "c1f18ee5-e452-3efa-5e80-c29c69d0d408",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-0803f93bfcb0b3158",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:internet-gateway/igw-0803f93bfcb0b3158",
            "id": "igw-0803f93bfcb0b3158",
            "owner_id": "965006678408",
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-0194a803dc01eddf3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:network-acl/acl-0194a803dc01eddf3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0194a803dc01eddf3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "965006678408",
            "subnet_ids": [
              "subnet-01c1d06ee4451e7ff",
              "subnet-082e323ce59d549e3"
            ],
            "tags": {},
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-870693e1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:network-acl/acl-870693e1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-870693e1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "965006678408",
            "subnet_ids": [],
            "tags": {},
            "vpc_id": "vpc-c043bba6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-031f0f3bda55b5b13",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "ela-attach-9e4d38be",
                "device_index": 1
              }
            ],
            "description": "EFS mount target for fs-e7507afe (fsmt-4b56ee52)",
            "id": "eni-031f0f3bda55b5b13",
            "mac_address": "02:42:4f:2c:e5:f5",
            "private_dns_name": "ip-10-0-1-164.us-west-1.compute.internal",
            "private_ip": "10.0.1.164",
            "private_ips": [
              "10.0.1.164"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-054dc2a574201ef5b",
              "sg-0a69a1c70b137ad76"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082e323ce59d549e3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-03210a5b91597fdde",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-06f601f80b4cb6878",
                "device_index": 0,
                "instance": "i-08418fe9cb5bae602"
              }
            ],
            "id": "eni-03210a5b91597fdde",
            "mac_address": "06:0b:ae:87:77:91",
            "private_dns_name": "ip-10-0-0-68.us-west-1.compute.internal",
            "private_ip": "10.0.0.68",
            "private_ips": [
              "10.0.0.68"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0176e8021bec0c6b4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c1d06ee4451e7ff"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-06d89663249a7b5e8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "ela-attach-6c78e350",
                "device_index": 1
              }
            ],
            "description": "EFS mount target for fs-e7507afe (fsmt-4d56ee54)",
            "id": "eni-06d89663249a7b5e8",
            "mac_address": "06:6f:2a:ce:ac:15",
            "private_dns_name": "ip-10-0-0-5.us-west-1.compute.internal",
            "private_ip": "10.0.0.5",
            "private_ips": [
              "10.0.0.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-054dc2a574201ef5b",
              "sg-0a69a1c70b137ad76"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c1d06ee4451e7ff"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-006b1040443ad832a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-006b1040443ad832a",
            "owner_id": "965006678408",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0803f93bfcb0b3158",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-0d11efd69a6f5bd54",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d11efd69a6f5bd54",
            "owner_id": "965006678408",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-b685f2d0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-b685f2d0",
            "owner_id": "965006678408",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-9024ddf7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-c043bba6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-006b1040443ad832a-rtbassoc-0a62f9adf8b403ba4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a62f9adf8b403ba4",
            "route_table_id": "rtb-006b1040443ad832a",
            "subnet_id": "subnet-082e323ce59d549e3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-006b1040443ad832a-rtbassoc-0d04cc4a2a47010da",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d04cc4a2a47010da",
            "route_table_id": "rtb-006b1040443ad832a",
            "subnet_id": "subnet-01c1d06ee4451e7ff"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-08ecdd9d68981bee5-EC2ContainerService-sq-EcsSecurityGroup-OD5N1VR8ZDSA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:security-group/sg-0176e8021bec0c6b4",
            "description": "ECS Allowed Ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0176e8021bec0c6b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EC2ContainerService-sq-EcsSecurityGroup-OD5N1VR8ZDSA",
            "name_prefix": "",
            "owner_id": "965006678408",
            "revoke_rules_on_delete": null,
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-08ecdd9d68981bee5-EFS-access-for-sg-0176e8021bec0c6b4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:security-group/sg-0a69a1c70b137ad76",
            "description": "Allow EFS access for ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a69a1c70b137ad76",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EFS access for ECS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0176e8021bec0c6b4"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS-access-for-sg-0176e8021bec0c6b4",
            "name_prefix": "",
            "owner_id": "965006678408",
            "revoke_rules_on_delete": null,
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-08ecdd9d68981bee5-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:security-group/sg-054dc2a574201ef5b",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054dc2a574201ef5b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "965006678408",
            "revoke_rules_on_delete": null,
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-08ecdd9d68981bee5-ecs-sq-6214",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:security-group/sg-0a5dc36885ec0b2e0",
            "description": "2020-09-27T18:22:11.391Z",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5dc36885ec0b2e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-sq-6214",
            "name_prefix": "",
            "owner_id": "965006678408",
            "revoke_rules_on_delete": null,
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-c043bba6-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:security-group/sg-04404b71",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04404b71",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "965006678408",
            "revoke_rules_on_delete": null,
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-c043bba6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-01c1d06ee4451e7ff-subnet-01c1d06ee4451e7ff",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:subnet/subnet-01c1d06ee4451e7ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-01c1d06ee4451e7ff",
            "map_public_ip_on_launch": true,
            "owner_id": "965006678408",
            "timeouts": {
            },
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-082e323ce59d549e3-subnet-082e323ce59d549e3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:subnet/subnet-082e323ce59d549e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-082e323ce59d549e3",
            "map_public_ip_on_launch": true,
            "owner_id": "965006678408",
            "timeouts": {
            },
            "vpc_id": "vpc-08ecdd9d68981bee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-08ecdd9d68981bee5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:vpc/vpc-08ecdd9d68981bee5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0194a803dc01eddf3",
            "default_route_table_id": "rtb-0d11efd69a6f5bd54",
            "default_security_group_id": "sg-054dc2a574201ef5b",
            "dhcp_options_id": "dopt-c244afa4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08ecdd9d68981bee5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d11efd69a6f5bd54",
            "owner_id": "965006678408",
            "tags": {
              "aws:cloudformation:logical-id": "Vpc",
              "aws:cloudformation:stack-id": "arn:aws:cloudformation:us-west-1:965006678408:stack/EC2ContainerService-sq/d3aade70-00ea-11eb-be79-06621dc34151",
              "aws:cloudformation:stack-name": "EC2ContainerService-sq"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-c043bba6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:vpc/vpc-c043bba6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-870693e1",
            "default_route_table_id": "rtb-b685f2d0",
            "default_security_group_id": "sg-04404b71",
            "dhcp_options_id": "dopt-c244afa4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-c043bba6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b685f2d0",
            "owner_id": "965006678408"
          }
        }
      ]
    },
    {
      "module": "module.ec2_docker_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0345db60aa8e3fa3d",
            "arn": "arn:aws:ec2:us-west-1:965006678408:instance/i-00667b8d4583daf1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00667b8d4583daf1a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sq_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003df7bfba53b6fab",
            "private_dns": "ip-172-31-4-164.us-west-1.compute.internal",
            "private_ip": "172.31.4.164",
            "public_dns": "ec2-52-53-198-60.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.198.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04b36d36e145c9fdd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "docker-host-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff8041e15a05daf9",
            "tags": {
              "Name": "docker-host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ff2b9081fed58da1"
            ]
          },
          "dependencies": [
            "module.ec2_docker_instance.aws_security_group.docker-host-ssh",
            "module.ec2_docker_instance.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_docker_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker-host-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:965006678408:security-group/sg-0ff2b9081fed58da1",
            "description": "allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff2b9081fed58da1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "docker-host-ssh",
            "name_prefix": "",
            "owner_id": "965006678408",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2804ee8a74e4606"
          }
        }
      ]
    }
  ]
}